stdlib/test/logger_test.bt
// Copyright 2026 James Casey
// SPDX-License-Identifier: Apache-2.0

// Tests the Logger class — info:, warn:, error:, debug:, and metadata variants

TestCase subclass: LoggerTest

  testInfoReturnsNil =>
    // info: returns nil
    self assert: (Logger info: "test info message") equals: nil

  testInfoWithMetadata =>
    // info:metadata: returns nil
    self assert: (Logger info: "test info" metadata: #{
      "key" => "value"
    }) equals: nil

  testWarnReturnsNil =>
    // warn: returns nil
    self assert: (Logger warn: "test warn message") equals: nil

  testWarnWithMetadata =>
    // warn:metadata: returns nil
    self assert: (Logger warn: "test warn" metadata: #{
      "attempt" => 2
    }) equals: nil

  testErrorReturnsNil =>
    // error: returns nil
    self assert: (Logger error: "test error message") equals: nil

  testErrorWithMetadata =>
    // error:metadata: returns nil
    self assert: (Logger error: "test error" metadata: #{
      "reason" => "timeout"
    }) equals: nil

  testDebugReturnsNil =>
    // debug: returns nil
    self assert: (Logger debug: "test debug message") equals: nil

  testDebugWithMetadata =>
    // debug:metadata: returns nil
    self assert: (Logger debug: "test debug" metadata: #{
      "count" => 42
    }) equals: nil
